--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
-# defaults file for ntfy_ansible_role
+# Variables that the role user is supposed to change
+
+ntfy_installation_mode: binary  # package_repo|package_download|binary
+ntfy_installation_mode_binary_systemd_enabled: true
