--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 # Variables that the role user is supposed to change
 
+ntfy_dirs_installation: /opt/ntfy
 ntfy_installation_mode: binary  # package_repo|package_download|binary
 ntfy_installation_mode_binary_systemd_enabled: true
+ntfy_version: latest  # latest|major.minor.patch (e.g. 2.0.1)
