--- a/vars/architecture_map.yml
+++ b/vars/architecture_map.yml
@@ -5,3 +5,14 @@ binary_arch_map:
   aarch64: 'arm64'
   armv7l: 'armv7'
   armv6l: 'armv6'
+
+package_arch_map:
+  i386: 'amd64'
+  x86_64: 'amd64'
+  aarch64: 'arm64'
+  armv7l: 'armv7'
+  armv6l: 'armv6'
+
+os_family_package_extension_map:
+  Debian: "deb"
+  RedHat: "rpm"
