fix(galaxy): add EL to supported platforms

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -26,6 +26,10 @@ galaxy_info:
       versions:
         - "36"
 
+    - name: EL
+      versions:
+        - "8"
+
   galaxy_tags:
     - ntfy
     - ntfysh
