--- a/tasks/preparation/ntfy_release.yml
+++ b/tasks/preparation/ntfy_release.yml
@@ -56,7 +56,7 @@
     - name: Set download link
       ansible.builtin.set_fact:
         _release_download_url: >-
-          "https://github.com/binwiederhier/ntfy/releases/download/v{{ ntfy_version }}/ntfy_{{ ntfy_version }}_linux_{{ release_package_arch }}.{{ release_package_ext }}"
+          https://github.com/binwiederhier/ntfy/releases/download/v{{ ntfy_version }}/ntfy_{{ ntfy_version }}_linux_{{ release_package_arch }}.{{ release_package_ext }}
 
     - name: Probe download link is valid
       ansible.builtin.uri:
