--- a/molecule/package_repo/converge.yml
+++ b/molecule/package_repo/converge.yml
@@ -7,4 +7,4 @@
       ansible.builtin.include_role:
         name: "stevenengland.ntfy"
       vars:
-        ntfy_installation_mode: package_download
+        ntfy_installation_mode: package_repo
