--- a/tasks/ntfy/main.yml
+++ b/tasks/ntfy/main.yml
@@ -41,6 +41,20 @@
           tags: release
       tags: release
 
+- name: Pre configuration (package repo installation)
+  when: >-
+    ntfy_installation_mode == "package_repo" and
+    ( _ntfy_installation_strategy_upgrade
+    or
+    _ntfy_installation_strategy_fresh )
+  block:
+    - name: Install ntfy release
+      ansible.builtin.include_tasks:
+        file: release_package_repo.yml
+        apply:
+          tags: release
+      tags: release
+
 - name: Create ntfy configuration
   ansible.builtin.include_tasks:
     file: configuration.yml
