ci: add scenario to test wf

--- a/.github/workflows/code_testing.yml
+++ b/.github/workflows/code_testing.yml
@@ -33,6 +33,7 @@ jobs:
         molecule_scenario: [
           default,
           package_download,
+          package_repo,
           upgrade
         ]
         include:
