--- a/.github/workflows/code_testing.yml
+++ b/.github/workflows/code_testing.yml
@@ -31,6 +31,7 @@ jobs:
           - fedora37
           - centos8
         molecule_scenario: [
+          alternative_installation,
           default,
           package_download,
           package_repo,
