--- a/vars/architecture_map.yml
+++ b/vars/architecture_map.yml
@@ -1,5 +1,12 @@
 ---
 binary_arch_map:
+  i386: 'amd64'
+  x86_64: 'amd64'
+  aarch64: 'arm64'
+  armv7l: 'armv7'
+  armv6l: 'armv6'
+
+binary_arch_map_old:
   i386: 'x86_64'
   x86_64: 'x86_64'
   aarch64: 'arm64'
